Name:                   Stream
Version:                0.5
License:                BSD3
License-file:           LICENSE
Author:                 Wouter Swierstra <w.s.swierstra@uu.nl>
			Bas van Dijk <v.dijk.bas@gmail.com>
Maintainer:             Wouter Swierstra <w.s.swierstra@uu.nl>
Stability:		experimental
Synopsis:               A library for manipulating infinite lists.
Description:            This package implements functions, analogous
                        to those from Data.List, to create and manipulate
			infinite lists: @data Stream a = Cons a (Stream a)@.
			It provides alternative definitions for those
			Prelude functions that make sense for such streams. 
			Note that this package has (almost) 
			nothing to do with the work on /Stream Fusion/ by 
			Duncan Coutts, Roman Leshchinskiy, and Don Stewart.
                        You may also want to check out the 'streams' package that
                        provides more comprehensive functionality.
Category:               Data
Build-Depends:          base < 5, QuickCheck >= 2.0, lazysmallcheck >= 0.3
Build-Type:		Simple
Exposed-modules:        Data.Stream

source-repository head
  type: git
  location: https://github.com/wouter-swierstra/Data.Stream.git
